[package]
name = "threshold_crypto"
# REMINDER: Update version in `README.md` when incrementing:
version = "0.3.2"
authors = [
    "Vladimir Komendantskiy <komendantsky@gmail.com>",
    "Andreas Fackler <AndreasFackler@gmx.de>",
    "Peter van Nostrand <jnz@riseup.net>",
    "Andrew Gross <andogro@gmail.com>",
    "Nick Sanders <nsan1129@gmail.com>",
    "Marc Brinkmann <git@marcbrinkmann.de>",
]
categories = ["cryptography"]
keywords = ["pairing", "threshold"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/poanetwork/threshold_crypto"
description = "Pairing threshold cryptography"
edition = "2018"

[dependencies]
byteorder = "1.3.2"
failure = "0.1.6"
hex_fmt = "0.3.0"
log = "0.4.8"
memsec = "0.5.6"
pairing = { version = "0.14.2", features = ["u128-support"] }
rand = "0.6.5"
rand04_compat = "0.1.1"
rand_chacha = "0.1.1"
serde = { version = "1.0.102", features = ["derive"] }
tiny-keccak = "1.5.0"
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"], optional = true  }
bincode = { version = "1.2", optional = true }

[dev-dependencies]
bincode = "1.2"
criterion = "0.3.0"
rand_xorshift = "0.1.1"

[[bench]]
name = "bench"
harness = false

[features]
use-insecure-test-only-mock-crypto = []
codec-support = ["codec", "bincode"]
